@@ -1,3 +1,11 @@
+2011-07-04  Michal Pryc <Michal.Pryc@Oracle.Com>
+
+	* common/nwam-scf.c:
+	* common/nwam-scf.h:
+	* common/nwamui_daemon.c:
+	 Compability change to allow build those sources on the
+	 Source Juicer builds clients prior to 170. - FOLLOW-UP
+
 2011-07-01  Michal Pryc <Michal.Pryc@Oracle.Com>
 
 	* common/nwam-scf.c:
